--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,13 +1,92 @@
+
+
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    background-color: #2196F3;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 20px;
+    grid-row-gap: 20px;
+    background-color: white;
     padding: 10px;
   }
-  .grid-item {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid rgba(0, 0, 0, 0.8);
-    padding: 20px;
-    font-size: 30px;
-    text-align: center;
+  .item_1 {
+    background-color: #007F5F;
+    color: #007F5F;
+    grid-column: 1 / 3;
+    grid-row: 1 / 12;
+  }
+
+  .item_2 {
+    background-color: #2B9348;
+    color: #2B9348;
+    grid-column: 1 / 3;
+    grid-row: 12 / 24;
+  }
+
+  .item_3 {
+    background-color: #55A630;
+    color: #55A630;
+    grid-column: 1 / 3;
+    grid-row: 24 / 39;
+
+  }
+
+  .item_4 {
+    background-color: #80B918;
+    color: #80B918;
+    grid-column:3 / 5;
+    grid-row: 1 / 24;
+
+
+
+  }
+
+  .item_5 {
+      background-color: #AACC00;
+      color: #AACC00;
+      grid-column:3 / 4;
+      grid-row: 24 / 31;
+ 
+  }
+
+  .item_6 {
+    background-color: #AACC00;
+    color: #AACC00;
+    grid-column:3 / 4;
+    grid-row: 31 / 39;
+  }
+
+  .item_7 {
+    background-color: #D4D700;
+    color: #D4D700;
+    grid-column:4 / 6;
+    grid-row: 24 / 39;
+  }
+
+  .item_8 {
+    background-color: #007F5F;
+    color: #007F5F;
+    grid-column:6 / 6;
+    grid-row: 24 / 39;
+  }
+
+  .item_9 {
+    background-color: #DDDF00;
+    color: #DDDF00;
+    grid-column:5 / 7;
+    grid-row: 1 / 8;
+  }
+
+  .item_10 {
+    background-color: #EEEF20;
+    color: #EEEF20;
+    grid-column:5 / 7;
+    grid-row: 8 / 16;
+  }
+
+  .item_11 {
+    background-color: #FFFF3F;
+    color: #FFFF3F;
+    grid-column:5 / 7;
+    grid-row: 16 /24;
   }
